# Study202409-2

./: .gitignore
code/python/convert_tools/: README.md  pyproject.toml
code/python/convert_tools/src/convert_tools/: bytes_number.py
code/python/convert_tools/tests/: test_bytes_number.py
code/python/download/: pyproject.toml
code/python/download/設計/: 1.単純フローチャート.md  2.簡易クラス図.md  5.クラス図.md  外部設計.md
code/python/work/awssample/: all_test.bat  analyze.bat  analyze.ps1  pyproject.toml
code/python/work/awssample/awssample/connect/: connect.py
code/python/work/awssample/awssample/dynamodb/: exception.py
code/python/work/awssample/awssample/dynamodb/create/: create.py
code/python/work/awssample/awssample/dynamodb/create/base/: create.py
code/python/work/awssample/awssample/dynamodb/drop/: delete.py
code/python/work/awssample/awssample/dynamodb/drop/base/: delete.py
code/python/work/awssample/awssample/dynamodb/insert/: insert.py
code/python/work/awssample/awssample/dynamodb/insert/base/: insert.py
code/python/work/awssample/tests/: test_main.py
code/python/work/awssample/tests/unit/: test_connect.py
code/python/work/awssample/tests/unit/dynamodb/create/: test_create.py
code/python/work/awssample/tests/unit/dynamodb/create/base/: test_create_mock.py  test_create_table.py
code/python/work/awssample/tests/unit/dynamodb/drop/: test_delete.py
code/python/work/awssample/tests/unit/dynamodb/drop/base/: test_delete_mock.py
code/python/work/awssample/tests/unit/dynamodb/insert/: test_insert.py
code/python/work/awssample/tests/unit/dynamodb/insert/base/: test_insert_add_item.py
code/python/work/csvtool2/: pyproject.toml
code/python/work/csvtool2/csvtool2/filereader/: filereader.py
code/python/work/csvtool2/tests/unit/: test_filereader.py
(+147 files in other folders)
