[project]
name = "convert-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "kero",email = "kero1976@outlook.jp"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "convert_tools", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
