[tool.poetry]
name = "awssample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.14"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
moto = "^5.0.14"
pylint = "^3.2.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
