[tool.poetry]
name = "csvtool2"
version = "0.1.0"
description = ""
authors = ["kero <kero1976@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
